--- a/simonGame/simon-frontend/src/App.css
+++ b/simonGame/simon-frontend/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -14,7 +15,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -39,16 +39,34 @@
 
 .cardWrapper {
   display: flex;
-  width: 400px;
+  width: 600px;
   flex-wrap: wrap;
 }
-.colorCard {
+/* .colorCard {
   height: 200px;
   width: 200px;
+} */
+.colorCard {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
 }
-.startButton {
-  position: absolute;
-  width: 100px;
+
+.cardWrapper .red {
+  border-radius: 0px 300px 0px 0px;
+}
+
+.cardWrapper .blue {
+  border-radius: 0px 0px 300px 0px;
+}
+.cardWrapper .yellow {
+  border-radius: 0px 0px 0px 300px;
+}
+.cardWrapper .green {
+  border-radius: 300px 0px 0px 0px;
 }
 
 .flash.flash {
@@ -62,6 +80,7 @@
 }
 .red.flash {
   background-color: rgb(255, 125, 125);
+  border-radius: 0px 200px 0px 0px;
 }
 
 .blue {
@@ -69,6 +88,7 @@
 }
 .blue.flash {
   background-color: rgb(125, 125, 255);
+  border-radius: 0px 0px 200px 0px;
 }
 
 .green {
@@ -76,24 +96,71 @@
 }
 .green.flash {
   background-color: rgb(125, 255, 125);
+  border-radius: 200px 0px 0px 0px;
 }
 .yellow {
   background-color: yellow;
 }
 .yellow.flash {
-  background-color: rgb(255, 255, 125);
+  background-color: rgb(245, 245, 151);
+  border-radius: 0px 0px 0px 200px;
 }
+/* .startButton {
 
-.score {
   position: absolute;
   width: 100px;
-  height: 100px;
+} */
+.startButton {
+  /* border-radius: 10px;
+  position: absolute;
+  width: 100px;
+  height: 40px;
+  top: 56%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+
+  border-style: solid;
+  border-width: 7px;
+  border-color: rgb(231, 228, 228);
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  color: white;
   background-color: black;
+  top: 43%;
   border-radius: 50%;
   line-height: 100px;
   font-size: 50px;
 }
+.score {
+  /* border-style: solid;
+  border-width: 7px;
+  border-color: rgb(231, 228, 228);
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background-color: black;
+  top: 45%;
+  border-radius: 50%;
+  line-height: 100px;
+  font-size: 50px; */
+  border-style: solid;
+  border-width: 7px;
+  border-color: rgb(231, 228, 228);
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  color: white;
+  background-color: black;
+  top: 43%;
+  border-radius: 50%;
+  line-height: 100px;
+  font-size: 50px;
 
+}
+.score h2{
+  margin-top: 25%;
+}
 .lost {
   position: absolute;
   width: 400px;
